--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,1 +1,9 @@
 exportPattern("^[[:alpha:]]+")
+import(lidR)
+import(caret)
+import(randomForest)
+import(data.table)
+importFrom(data.table, `:=`)
+importFrom(caret, train)
+importFrom(randomForest, randomForest)
+import(reticulate)
