--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,10 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Imports: 
     reticulate,
-    lidR
+    lidR,
+    data.table,
+    caret,
+    radomForest
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
