fix typo description

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Imports:
     lidR,
     data.table,
     caret,
-    radomForest
+    randomForest
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
